--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
     <main class="principal">
         <h2 class="titulo-pagina">Início</h2>
-        <article class="cartao cartao--destaque">
-            <img src="./assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
+        <article class="cartao cartao--destaque destaque-video">
+            <img src="./assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
+            <img src="./assets/img/banner_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em destaque</p>
                 <h3 class="cartao__titulo">HZC - Life is... /2021</h3>
@@ -45,39 +46,39 @@
             </div>
         </article>
 
-        <article class="cartao cartao--recentes">
+        <article class="cartao cartao--recentes videos-recentes">
             <h3 class="cartao__titulo">Vídeos recentes</h3>
             <a href="#" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
                 <li class="cartao__item">
-                    <img src="" alt="" class="cartao__item-thumbnail">
+                    <img src="./assets/img/miniatura_1.png" alt="" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
                     <p class="cartao__item-perfil">Bruno Lopes</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="" alt="" class="cartao__item-thumbnail">
+                    <img src="./assets/img/miniatura_2.png" alt="" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
                     <p class="cartao__item-perfil">Bruno Lopes</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="" alt="" class="cartao__item-thumbnail">
+                    <img src="./assets/img/miniatura_3.png" alt="" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
                     <p class="cartao__item-perfil">Bruno Lopes</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="" alt="" class="cartao__item-thumbnail">
+                    <img src="./assets/img/miniatura_3.png" alt="" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
                     <p class="cartao__item-perfil">Bruno Lopes</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="" alt="" class="cartao__item-thumbnail">
+                    <img src="./assets/img/miniatura_4.png" alt="" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
                     <p class="cartao__item-perfil">Bruno Lopes</p>
                 </li>
             </ul>
         </article>
-
-        <section class="secao">
+ 
+        <section class="secao secao-videos">
             <h3 class="titulo-secao">Vídeos mais vistos</h3>
             <article class="cartao">
                 <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
@@ -120,40 +121,41 @@
             </article>
         </section>
 
-        <article class="cartao cartao--recentes">
+        <article class="cartao cartao--recentes produtos-recentes">
             <h3 class="cartao__titulo">Vídeos recentes</h3>
             <a href="#" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
                 <li class="cartao__item">
-                    <img src="" alt="" class="cartao__item-thumbnail">
+                    <img src="./assets/img/miniatura_1.png" alt="" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
                     <p class="cartao__item-perfil">Bruno Lopes</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="" alt="" class="cartao__item-thumbnail">
+                    <img src="./assets/img/miniatura_2.png" alt="" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
                     <p class="cartao__item-perfil">Bruno Lopes</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="" alt="" class="cartao__item-thumbnail">
+                    <img src="./assets/img/miniatura_2.png" alt="" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
                     <p class="cartao__item-perfil">Bruno Lopes</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="" alt="" class="cartao__item-thumbnail">
+                    <img src="./assets/img/miniatura_3.png" alt="" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
                     <p class="cartao__item-perfil">Bruno Lopes</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="" alt="" class="cartao__item-thumbnail">
+                    <img src="./assets/img/miniatura_4.png" alt="" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
                     <p class="cartao__item-perfil">Bruno Lopes</p>
                 </li>
             </ul>
         </article>
 
-        <article class="cartao cartao--destaque">
-            <img src="./assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
+        <article class="cartao cartao--destaque destaque-produtos">
+            <img src="./assets/img/banner-mobile_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
+            <img src="./assets/img/banner_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em destaque</p>
                 <h3 class="cartao__titulo">HZC - Life is... /2021</h3>
@@ -164,7 +166,7 @@
             </div>
         </article>
 
-        <section class="secao">
+        <section class="secao secao-produtos">
             <h3 class="titulo-secao">Vídeos mais vistos</h3>
             <article class="cartao">
                 <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
