Organizando pastas CSS

--- a/index.html
+++ b/index.html
@@ -11,9 +11,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap">
     <link rel="stylesheet" href="./assets/css/app.css">
-    <link rel="stylesheet" href="./assets/css/cabecalho.css">
-    <link rel="stylesheet" href="./assets/css/menuLateral.css">
-    <link rel="stylesheet" href="./assets/css/principal.css">
+    <link rel="stylesheet" href="./assets/css/cabecalho/cabecalho.css">
+    <link rel="stylesheet" href="./assets/css/cabecalho/cabecalho-menu.css">
+    <link rel="stylesheet" href="./assets/css/cabecalho/cabecalho-logo.css">
+    <link rel="stylesheet" href="./assets/css/cabecalho/cabecalho-perfil.css">
+    <link rel="stylesheet" href="./assets/css/cabecalho/cabecalho-notificacao.css">
+    <link rel="stylesheet" href="./assets/css/menu-lateral/menu-lateral.css">
+    <link rel="stylesheet" href="./assets/css/menu-lateral/menu-lateral--ativo.css">
+    <link rel="stylesheet" href="./assets/css/menu-lateral/menuLateral-logo.css">
+    <link rel="stylesheet" href="./assets/css/menu-lateral/menuLateral-link.css">
+    <link rel="stylesheet" href="./assets/css/main/conteudoPrincipal.css">
+    <link rel="stylesheet" href="./assets/css/main/tituloPagina.css">
+    <link rel="stylesheet" href="./assets/css/main/tituloSecao.css">
+    <link rel="stylesheet" href="./assets/css/main/cartao.css">
+    <link rel="stylesheet" href="./assets/css/main/cartaoImagem.css">
+    <link rel="stylesheet" href="./assets/css/main/cartao--destaque.css">
+    <link rel="stylesheet" href="./assets/css/main/cartao-conteudo.css">
+    <link rel="stylesheet" href="./assets/css/main/cartaoDestaque.css">
+    <link rel="stylesheet" href="./assets/css/main/cartaoTitulo.css">
+    <link rel="stylesheet" href="./assets/css/main/cartaoPerfil.css">
+    <link rel="stylesheet" href="./assets/css/main/cartaoInfo.css">
+    <link rel="stylesheet" href="./assets/css/main/cartaoBotao.css">
+    <link rel="stylesheet" href="./assets/css/main/cartaoRecentes.css">
+    <link rel="stylesheet" href="./assets/css/main/cartaoLink.css">
+    <link rel="stylesheet" href="./assets/css/main/cartaoLista.css">
+    <link rel="stylesheet" href="./assets/css/main/cartaoItem.css">
+    <link rel="stylesheet" href="./assets/css/main/secao.css">
 </head>
 
 <body class="app">
@@ -34,7 +57,7 @@
         <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
     </nav>
 
-    <main class="principal">
+    <main class="conteudo-principal">
         <h2 class="titulo-pagina">Início</h2>
         <article class="cartao cartao--destaque destaque-video">
             <img src="./assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
