--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./assets/css/main/tituloPagina.css">
     <link rel="stylesheet" href="./assets/css/main/tituloSecao.css">
     <link rel="stylesheet" href="./assets/css/main/cartao.css">
+    <link rel="stylesheet" href="./assets/css/main/cartaoConteudo-destaque.css">
     <link rel="stylesheet" href="./assets/css/main/cartaoImagem.css">
     <link rel="stylesheet" href="./assets/css/main/cartao--destaque.css">
     <link rel="stylesheet" href="./assets/css/main/cartao-conteudo.css">
@@ -62,12 +63,12 @@
         <article class="cartao cartao--destaque destaque-video">
             <img src="./assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
             <img src="./assets/img/banner_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
-            <div class="cartao__conteudo">
+            <div class="cartao__conteudo-destaque">
                 <p class="cartao__destaque">Vídeo em destaque</p>
-                <h3 class="cartao__titulo">HZC - Life is... /2021</h3>
+                <h3 class="cartao__titulo">HZC - Life is.../ 2021</h3>
                 <p class="cartao__perfil">Bruno Lopes</p>
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
+                <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir Agora</button>
             </div>
         </article>
@@ -79,27 +80,27 @@
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_1.png" alt="" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_2.png" alt="" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                    <h4 class="cartao__item-titulo">HZC - Vol.3</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_3.png" alt="" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopes</p>
-                </li>
-                <li class="cartao__item">
-                    <img src="./assets/img/miniatura_3.png" alt="" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                    <h4 class="cartao__item-titulo">HZC - Pescaria na Urca</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_4.png" alt="" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                    <h4 class="cartao__item-titulo">Vidalocagi - Guerreiros do Asfalto</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="./assets/img/miniatura_5.png" alt="" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Vidalocagi - Não importa o nível</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
             </ul>
         </article>
@@ -109,7 +110,7 @@
             <article class="cartao">
                 <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopes</p>
+                    <p class="cartao__perfil">André Soares</p>
                     <h3 class="cartao__titulo">HZC - Tudo sem padrin</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
@@ -117,30 +118,30 @@
             </article>
 
             <article class="cartao">
-                <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="./assets/img/video_2.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopes</p>
-                    <h3 class="cartao__titulo">HZC - Tudo sem padrin</h3>
+                    <h3 class="cartao__titulo">HZC - Enter the Hu-flez</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
 
             <article class="cartao">
-                <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="./assets/img/video_3.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopes</p>
-                    <h3 class="cartao__titulo">HZC - Tudo sem padrin</h3>
+                    <p class="cartao__perfil">Luiza Sampaio</p>
+                    <h3 class="cartao__titulo">HZC - Vol.3</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
 
             <article class="cartao">
-                <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="./assets/img/video_4.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopes</p>
-                    <h3 class="cartao__titulo">HZC - Tudo sem padrin</h3>
+                    <h3 class="cartao__titulo">HZC - Love Machine</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
@@ -148,33 +149,43 @@
         </section>
 
         <article class="cartao cartao--recentes produtos-recentes">
-            <h3 class="cartao__titulo">Vídeos recentes</h3>
+            <h3 class="cartao__titulo">Novos artes</h3>
             <a href="#" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_1.png" alt="" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                    <h4 class="cartao__item-titulo">Sem Título 01</h4>
+                    <p class="cartao__item-perfil">Antonio Tebyyriçá</p>
                 </li>
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_2.png" alt="" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                    <h4 class="cartao__item-titulo">Sem Título 02</h4>
+                    <p class="cartao__item-perfil">Antonio Tebyyriçá</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="./assets/img/miniatura_2.png" alt="" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopes</p>
-                </li>
-                <li class="cartao__item">
-                    <img src="./assets/img/miniatura_3.png" alt="" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                    <img src="./assets/img/miniatura_5.png" alt="" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Malunguisse</h4>
+                    <p class="cartao__item-perfil">Raphael Gibson</p>
                 </li>
                 <li class="cartao__item">
                     <img src="./assets/img/miniatura_4.png" alt="" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopes</p>
+                    <h4 class="cartao__item-titulo">Coroa da converse</h4>
+                    <p class="cartao__item-perfil">Nikolas Murtas</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="./assets/img/miniatura_3.png" alt="" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Segurança</h4>
+                    <p class="cartao__item-perfil">Raphael Gibson</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="./assets/img/miniatura_2.png" alt="" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Coroa da converse</h4>
+                    <p class="cartao__item-perfil">Nikolas Murtas</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="./assets/img/miniatura_5.png" alt="" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Sem Título 03</h4>
+                    <p class="cartao__item-perfil">Antonio Tebyyriçá</p>
                 </li>
             </ul>
         </article>
@@ -182,55 +193,55 @@
         <article class="cartao cartao--destaque destaque-produtos">
             <img src="./assets/img/banner-mobile_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
             <img src="./assets/img/banner_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
-            <div class="cartao__conteudo">
-                <p class="cartao__destaque">Vídeo em destaque</p>
-                <h3 class="cartao__titulo">HZC - Life is... /2021</h3>
-                <p class="cartao__perfil">Bruno Lopes</p>
-                <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
-                <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir Agora</button>
+            <div class="cartao__conteudo-destaque">
+                <p class="cartao__destaque">Nova Arte</p>
+                <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
+                <p class="cartao__perfil">João ZMS</p>
+                <p class="cartao__info cartao__info--valor">33,33</p>
+                <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
+                <button class="cartao__botao cartao__botao--produto cartao__botao--destaque">Comprar Agora</button>
             </div>
         </article>
 
         <section class="secao secao-produtos">
-            <h3 class="titulo-secao">Vídeos mais vistos</h3>
+            <h3 class="titulo-secao">Camisas mais recentes</h3>
             <article class="cartao">
-                <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="./assets/img/produto_1.png" alt="Camiza HZC" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopes</p>
-                    <h3 class="cartao__titulo">HZC - Tudo sem padrin</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <p class="cartao__perfil">André Soares</p>
+                    <h3 class="cartao__titulo">IBM</h3>
+                    <p class="cartao__info cartao__info--valor">33,00</p>
+                    <button class="cartao__botao cartao__botao--produto" aria-label="Assistir agora"></button>
                 </div>
             </article>
 
             <article class="cartao">
-                <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="./assets/img/produto_2.png" alt="Camiza HZC" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopes</p>
-                    <h3 class="cartao__titulo">HZC - Tudo sem padrin</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <p class="cartao__perfil">Bruno Soares</p>
+                    <h3 class="cartao__titulo">Huflez Crew Philosophy Club</h3>
+                    <p class="cartao__info cartao__info--valor">33,00</p>
+                    <button class="cartao__botao cartao__botao--produto" aria-label="Assistir agora"></button>
                 </div>
             </article>
 
             <article class="cartao">
-                <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="./assets/img/produto_3.png" alt="Camiza HZC" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopes</p>
-                    <h3 class="cartao__titulo">HZC - Tudo sem padrin</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <p class="cartao__perfil">Luiza Sampaio</p>
+                    <h3 class="cartao__titulo">Corujita Noturna</h3>
+                    <p class="cartao__info cartao__info--valor">33,00</p>
+                    <button class="cartao__botao cartao__botao--produto" aria-label="Assistir agora"></button>
                 </div>
             </article>
 
             <article class="cartao">
-                <img src="./assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="./assets/img/produto_4.png" alt="Camiza HZC" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopes</p>
-                    <h3 class="cartao__titulo">HZC - Tudo sem padrin</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <h3 class="cartao__titulo">GGG - Gatin G Gorro</h3>
+                    <p class="cartao__info cartao__info--valor">33,00</p>
+                    <button class="cartao__botao cartao__botao--produto" aria-label="Assistir agora"></button>
                 </div>
             </article>
         </section>
