--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
     <nav class="menu-lateral">
         <img src="./assets/img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
-        <a href="./index.html" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
+        <a href="./index.html"
+            class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
         <a href="./picos.html" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--integrantes">Integrantes</a>
@@ -61,7 +62,8 @@
     <main class="conteudo-principal">
         <h2 class="titulo-pagina">Início</h2>
         <article class="cartao cartao--destaque destaque-video">
-            <img src="./assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
+            <img src="./assets/img/banner-mobile_1.png" alt="Banner do cartão"
+                class="cartao__imagem cartao__imagem--mobile">
             <img src="./assets/img/banner_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo-destaque">
                 <p class="cartao__destaque">Vídeo em destaque</p>
@@ -104,7 +106,7 @@
                 </li>
             </ul>
         </article>
- 
+
         <section class="secao secao-videos">
             <h3 class="titulo-secao">Vídeos mais vistos</h3>
             <article class="cartao">
@@ -191,7 +193,8 @@
         </article>
 
         <article class="cartao cartao--destaque destaque-produtos">
-            <img src="./assets/img/banner-mobile_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
+            <img src="./assets/img/banner-mobile_2.png" alt="Banner do cartão"
+                class="cartao__imagem cartao__imagem--mobile">
             <img src="./assets/img/banner_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo-destaque">
                 <p class="cartao__destaque">Nova Arte</p>
