Excluindo picos.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="./index.html"
             class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
-        <a href="./picos.html" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--integrantes">Integrantes</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
